hero section, dark model pending

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,8 +13,9 @@
   <div class="flex">
   <nav>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/The-phone-house.svg/640px-The-phone-house.svg.png" alt="logo">
-    <div id="dark-mode"></div>
+    
     <ul>
+    <li id="dark-mode"></li>
     <li class="websy-trigger websy-btn btn-primary " data-view="home">Home</li>
     <li class="websy-trigger websy-btn btn-primary" data-view="apple">Apple</li>
     <li class="websy-trigger websy-btn btn-primary" data-view="samsung">Samsung</li>
