--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,8 +12,9 @@
 <body>
   <div class="flex">
   <nav>
+   <a href="/">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/The-phone-house.svg/640px-The-phone-house.svg.png" alt="logo">
-    
+  </a>
     <ul>
     <li id="dark-mode"></li>
     <li class="websy-trigger websy-btn btn-primary " data-view="home">Home</li>
