--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,10 +20,10 @@
     <li class="websy-trigger websy-btn btn-primary " data-view="home">Home</li>
     <li class="websy-trigger websy-btn btn-primary" data-view="apple">Apple</li>
     <li class="websy-trigger websy-btn btn-primary" data-view="samsung">Samsung</li>
+  <!--  <li class="websy-trigger websy-btn btn-primary" data-view="stores"><img src="../images/location-svgrepo-com.svg"></li>-->
   </ul>
 </nav>
 </div>
-
 <section>
   include "./views/home.html"
 </section>
@@ -33,7 +33,12 @@
 <section>
   include "./views/samsung.html"
 </section>
-
+<section>
+  include "./views/stores.html"
+</section>
+<section>
+  include "./views/phonedetail.html"
+</section>
   <script src="/external/@websy/websy-designs/dist/websy-designs.debug.js"></script>
   <script src="/resources/app.debug.js"></script>
 </body>
