render phone details success

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,7 +20,7 @@
     <li class="websy-trigger websy-btn btn-primary " data-view="home">Home</li>
     <li class="websy-trigger websy-btn btn-primary" data-view="apple">Apple</li>
     <li class="websy-trigger websy-btn btn-primary" data-view="samsung">Samsung</li>
-  <!--  <li class="websy-trigger websy-btn btn-primary" data-view="stores"><img src="../images/location-svgrepo-com.svg"></li>-->
+    <li class="websy-trigger websy-btn btn-primary" data-view="stores">Store Locator</li>
   </ul>
 </nav>
 </div>
@@ -38,6 +38,9 @@
 </section>
 <section>
   include "./views/phonedetail.html"
+</section>
+<section>
+  include "./views/stores.html"
 </section>
   <script src="/external/@websy/websy-designs/dist/websy-designs.debug.js"></script>
   <script src="/resources/app.debug.js"></script>
