--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,23 +7,32 @@
   <link rel="stylesheet" href="/resources/app.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/external/@websy/websy-designs/dist/websy-designs.min.css">
+  <script src="https://kit.fontawesome.com/5e562d9010.js" crossorigin="anonymous"></script>
   <title>Websy Designs Phone Shop</title>
 </head>
 <body>
+
   <div class="flex">
   <nav>
    <a href="/">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/The-phone-house.svg/640px-The-phone-house.svg.png" alt="logo">
   </a>
+
+  <button class="hamburger" id="hamburger">
+    <i class="fa-solid fa-bars"></i>
+  </button>
+
     <ul>
     <li id="dark-mode"></li>
-    <li class="websy-trigger websy-btn btn-primary " data-view="home">Home</li>
     <li class="websy-trigger websy-btn btn-primary" data-view="apple">Apple</li>
     <li class="websy-trigger websy-btn btn-primary" data-view="samsung">Samsung</li>
     <li class="websy-trigger websy-btn btn-primary" data-view="stores">Store Locator</li>
+    <li class="websy-trigger cart" data-view="cart"><i class="fa-solid fa-basket-shopping"></i></li>
   </ul>
 </nav>
+
 </div>
+
 <section>
   include "./views/home.html"
 </section>
@@ -41,6 +50,9 @@
 </section>
 <section>
   include "./views/stores.html"
+</section>
+<section>
+  include "./views/cart.html"
 </section>
   <script src="/external/@websy/websy-designs/dist/websy-designs.debug.js"></script>
   <script src="/resources/app.debug.js"></script>
