footer added w dark mode

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -61,6 +61,16 @@
 <section>
   include "./views/cart.html"
 </section>
+<footer>
+  <ul class="footer-parent">
+    <li class="websy-trigger nav-item nav-link" data-view="#">Privacy Policy</li>
+    <li class="websy-trigger nav-item nav-link" data-view="#"><i class="fa-solid fa-envelope"></i></li>
+  </ul>
+  <div class="footer-p">
+  <p>© The Phone House - Barcelona (Spain)</p>
+</div>
+</footer>
+
   <script src="/external/@websy/websy-designs/dist/websy-designs.debug.js"></script>
   <script src="/resources/app.debug.js"></script>
 </body>
