--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/external/@websy/websy-designs/dist/websy-designs.min.css">
   <script src="https://kit.fontawesome.com/5e562d9010.js" crossorigin="anonymous"></script>
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet" />
   <title>Websy Designs Phone Shop</title>
 </head>
 <body>
