faq contact dropdowns

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -41,6 +41,8 @@
 </nav>
 
 </div>
+<div class="sec-container">
+
 
 <section>
   include "./views/home.html"
@@ -63,14 +65,16 @@
 <section>
   include "./views/cart.html"
 </section>
+<section>
+  include "./views/contact.html"
+</section>
+</div>
+
 <footer>
   <ul class="footer-parent">
-    <li class="websy-trigger nav-item nav-link" data-view="#">Privacy Policy</li>
-    <li class="websy-trigger nav-item nav-link" data-view="#"><i class="fa-solid fa-envelope"></i></li>
+    <li class="websy-trigger nav-item nav-link" data-view="contact">Privacy Policy</li>
+    <li class="websy-trigger nav-item nav-link" data-view="contact"><i class="fa-solid fa-envelope"></i></li>
   </ul>
-  <div class="footer-p">
-  <p>© The Phone House - Barcelona (Spain)</p>
-</div>
 </footer>
 
   <script src="/external/@websy/websy-designs/dist/websy-designs.debug.js"></script>
