--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,6 +35,7 @@
   <div class="right-triggers">
     <li id="dark-mode"></li>
     <li class="websy-trigger cart" data-view="cart"><i class="fa-solid fa-basket-shopping"></i></li>
+    <li class="websy-trigger cart" data-view="cart-1"><i class="fa-solid fa-cart-circle-check"></i></li>
   </div>
 
 
@@ -73,7 +74,7 @@
 <footer>
   <ul class="footer-parent">
     <li class="websy-trigger nav-item nav-link" data-view="#">Privacy Policy</li>
-    <li class="websy-trigger nav-item nav-link" data-view="contact"><i class="fa-solid fa-envelope"></i></li>
+    <li class="item-amount">0</li>
   </ul>
 </footer>
 
