--- a/src/html/index.html
+++ b/src/html/index.html
@@ -69,12 +69,15 @@
 <section>
   include "./views/contact.html"
 </section>
+<section>
+  include "./views/notFound.html"
+</section>
 </div>
 
 <footer>
   <ul class="footer-parent">
-    <li class="websy-trigger nav-item nav-link" data-view="#">Privacy Policy</li>
-    <li class="item-amount">0</li>
+    <li class="websy-trigger nav-item nav-link" data-view="notFound">Privacy Policy</li>
+    <li class="websy-trigger " data-view="contact">FAQ's</li>
   </ul>
 </footer>
 
