--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,17 +20,18 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/The-phone-house.svg/640px-The-phone-house.svg.png" alt="logo">
   </a>
 
-    <div class="central-triggers">
+    <div class="central-triggers" id="cent">
     <li class="websy-trigger websy-btn btn-primary" data-view="apple">Apple</li>
     <li class="websy-trigger websy-btn btn-primary" data-view="samsung">Samsung</li>
     <li class="websy-trigger websy-btn btn-primary" data-view="stores">Store Locator</li>
   </div>
 
-  <div class="right-triggers">
+  <div class="right-triggers" id="right">
     <li id="dark-mode"></li>
     <li class="websy-trigger cart" data-view="cart"><i class="fa-solid fa-basket-shopping"></i></li>
     <li class="item-count" id="item-count"></li>
   </div>
+
   <button class="hamburger" id="hamburger">
     <svg viewBox="0 0 100 80" width="20" height="20">
       <rect width="100" height="20" rx="8"></rect>
