dark mode logo hide and show

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,7 +17,7 @@
   <div class="flex">
   <nav>
    <a href="/">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/The-phone-house.svg/640px-The-phone-house.svg.png" alt="logo">
+    <img class="tps-logo" src="./resources/tpslogo.png" alt="logo">
   </a>
 
     <div class="central-triggers" id="cent">
