--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/resources/app.min.css">
+  
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/external/@websy/websy-designs/dist/websy-designs.min.css">
   <script src="https://kit.fontawesome.com/5e562d9010.js" crossorigin="anonymous"></script>
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet" />
+<link rel="stylesheet" href="/resources/app.min.css">
   <title>Websy Designs Phone Shop</title>
 </head>
 <body>
@@ -69,6 +70,9 @@
 </section>
 <section>
   include "./views/contact.html"
+</section>
+<section>
+  include "./views/checkout.html"
 </section>
 <section>
   include "./views/notFound.html"
